# slide-memo

./: LICENSE  README.md  SlideMemo.iss  SlideMemo.spec  ai_features.py  ai_provider.py  bump_version.ps1  database.py  guide.ts  main.py  pyproject.toml  settings_dialog.py
.claude/: settings.local.json
src/: database.py  main.py  settings_dialog.py  test_colors.py
