[project]
name = "memo-slide"
version = "1.0.1"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.7.0",
    "litellm>=1.85.1",
    "markdown>=3.10.2",
    "numpy>=2.4.6",
    "pyqt6>=6.11.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.20.0",
]
